@@ -6,10 +6,7 @@ import nz.ac.canterbury.seng302.gardenersgrove.entity.Garden;
 import nz.ac.canterbury.seng302.gardenersgrove.entity.Gardener;
 import nz.ac.canterbury.seng302.gardenersgrove.entity.IdentifiedPlant;
 import nz.ac.canterbury.seng302.gardenersgrove.entity.IdentifiedPlantSpecies;
-import nz.ac.canterbury.seng302.gardenersgrove.service.GardenService;
-import nz.ac.canterbury.seng302.gardenersgrove.service.GardenerFormService;
-import nz.ac.canterbury.seng302.gardenersgrove.service.ImageService;
-import nz.ac.canterbury.seng302.gardenersgrove.service.PlantIdentificationService;
+import nz.ac.canterbury.seng302.gardenersgrove.service.*;
 import nz.ac.canterbury.seng302.gardenersgrove.util.ValidityChecker;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -37,7 +34,7 @@ import java.util.stream.IntStream;
  */
 @Controller
 public class CollectionsController {
-    private final PlantIdentificationService plantIdentificationService;
+    private final IdentifiedPlantService identifiedPlantService;
     private final ImageService imageService;
     Logger logger = LoggerFactory.getLogger(CollectionsController.class);
 
@@ -49,17 +46,22 @@ public class CollectionsController {
 
     private Gardener gardener;
 
+    private final String paginationMessageAttribute = "paginationMessage";
+
+    private final String errorOccurredAttribute = "errorOccurred";
+
+    private final String showModalAttribute = "showModal";
+
     /**
      * Constructor to instantiate CollectionsController
-     * @param plantIdentificationService the service used to interact with database
      * @param gardenService used in conjunction with gardener form service to populate navbar
      * @param gardenerFormService used in conjunction with above to populate navbar
      */
-    public CollectionsController(PlantIdentificationService plantIdentificationService, ImageService imageService, GardenService gardenService, GardenerFormService gardenerFormService) {
-        this.plantIdentificationService = plantIdentificationService;
+    public CollectionsController(ImageService imageService, GardenService gardenService, GardenerFormService gardenerFormService, IdentifiedPlantService identifiedPlantService) {
         this.imageService = imageService;
         this.gardenService = gardenService;
         this.gardenerFormService = gardenerFormService;
+        this.identifiedPlantService = identifiedPlantService;
         pageSize = 12;
     }
 
@@ -94,7 +96,7 @@ public class CollectionsController {
         gardenerOptional.ifPresent(value -> gardener = value);
 
         int pageNo = ValidityChecker.validatePageNumber(pageNoString);
-        Page<IdentifiedPlantSpecies> speciesList = plantIdentificationService.getGardenerPlantSpeciesPaginated(pageNo, pageSize, gardener.getId());
+        Page<IdentifiedPlantSpecies> speciesList = identifiedPlantService.getGardenerPlantSpeciesPaginated(pageNo, pageSize, gardener.getId());
         logger.info("GET /myCollection");
         model.addAttribute("speciesList", speciesList);
         int totalPages = speciesList.getTotalPages();
@@ -103,17 +105,17 @@ public class CollectionsController {
             int upperBound = Math.min(pageNo + 3, totalPages);
             List<Integer> pageNumbers = IntStream.rangeClosed(lowerBound, upperBound)
                     .boxed()
-                    .collect(Collectors.toList());
+                    .toList();
             model.addAttribute("pageNumbers", pageNumbers);
 
             long totalItems = speciesList.getTotalElements();
             int startIndex = pageSize * pageNo + 1;
             long endIndex = Math.min((long) pageSize * (pageNo + 1), totalItems);
             String paginationMessage = "Showing results " + startIndex + " to " + endIndex + " of " + totalItems;
-            model.addAttribute("paginationMessage", paginationMessage);
+            model.addAttribute(paginationMessageAttribute, paginationMessage);
         } else {
             String paginationMessage = "Showing results 0 to 0 of 0";
-            model.addAttribute("paginationMessage", paginationMessage);
+            model.addAttribute(paginationMessageAttribute, paginationMessage);
         }
 
 
@@ -130,16 +132,24 @@ public class CollectionsController {
             logger.error("Error converting lists to JSON", e);
         }
 
-        if(!model.containsAttribute("errorOccurred")) {
-            model.addAttribute("errorOccurred", false);
+        if(!model.containsAttribute(errorOccurredAttribute)) {
+            model.addAttribute(errorOccurredAttribute, false);
         }
-        if (!model.containsAttribute("showModal")) {
-            model.addAttribute("showModal", false);
+        if (!model.containsAttribute(showModalAttribute)) {
+            model.addAttribute(showModalAttribute, false);
         }
 
         return "myCollectionTemplate";
     }
 
+
+    /**
+     * Displays all the plants that have been added to the collection that are a part of the specified species
+     * @param speciesName the name of the species
+     * @param pageNoString the page number
+     * @param model the model
+     * @return the collection details template
+     */
     @GetMapping("/collectionDetails")
     public String getSpeciesDetails(
             @RequestParam(name = "speciesName") String speciesName,
@@ -149,7 +159,7 @@ public class CollectionsController {
         Optional<Gardener> gardenerOptional = getGardenerFromAuthentication();
         gardenerOptional.ifPresent(value -> gardener = value);
         int pageNo = ValidityChecker.validatePageNumber(pageNoString);
-        Page<IdentifiedPlant> collectionsList = plantIdentificationService.getGardenerPlantsBySpeciesPaginated(pageNo, pageSize, gardener.getId(), speciesName);
+        Page<IdentifiedPlant> collectionsList = identifiedPlantService.getGardenerPlantsBySpeciesPaginated(pageNo, pageSize, gardener.getId(), speciesName);
         model.addAttribute("collectionsList", collectionsList);
         model.addAttribute("speciesName", speciesName);
 
@@ -159,17 +169,17 @@ public class CollectionsController {
             int upperBound = Math.min(pageNo + 3, totalPages);
             List<Integer> pageNumbers = IntStream.rangeClosed(lowerBound, upperBound)
                     .boxed()
-                    .collect(Collectors.toList());
+                    .toList();
             model.addAttribute("pageNumbers", pageNumbers);
 
             long totalItems = collectionsList.getTotalElements();
             int startIndex = pageSize * pageNo + 1;
             long endIndex = Math.min((long) pageSize * (pageNo + 1), totalItems);
             String paginationMessage = "Showing results " + startIndex + " to " + endIndex + " of " + totalItems;
-            model.addAttribute("paginationMessage", paginationMessage);
+            model.addAttribute(paginationMessageAttribute, paginationMessage);
         } else {
             String paginationMessage = "Showing results 0 to 0 of 0";
-            model.addAttribute("paginationMessage", paginationMessage);
+            model.addAttribute(paginationMessageAttribute, paginationMessage);
         }
 
         // Add gardens to the model for the navbar
@@ -180,8 +190,19 @@ public class CollectionsController {
     }
 
 
-
-
+    /**
+     * This post method is used when the user manually adds a plant to their collection. It validates all the user inputs
+     * and adds error messages where appropriate.
+     *
+     * @param plantName the name of the plant
+     * @param description the description of the plant
+     * @param scientificName the scientific name of the plant
+     * @param uploadedDate the date uploaded
+     * @param isDateInvalid whether HTML picked up a date error or not
+     * @param plantImage the image uploaded for the plant
+     * @param redirectAttributes used to add flash attributes for redirection.
+     * @return returns the my collection template
+     */
     @PostMapping("/myCollection")
     public String addPlantToCollection(
             @RequestParam (name="plantName") String plantName,
@@ -247,9 +268,9 @@ public class CollectionsController {
             }
             if(plantImage.isEmpty()) {
                 identifiedPlant.setUploadedImage("/images/placeholder.jpg");
-                plantIdentificationService.saveIdentifiedPlantDetails(identifiedPlant);
+                identifiedPlantService.saveIdentifiedPlantDetails(identifiedPlant);
             } else {
-                plantIdentificationService.saveIdentifiedPlantDetails(identifiedPlant);
+                identifiedPlantService.saveIdentifiedPlantDetails(identifiedPlant);
                 imageService.saveCollectionPlantImage(plantImage, identifiedPlant);
             }
             return "redirect:/myCollection";
@@ -258,8 +279,8 @@ public class CollectionsController {
             redirectAttributes.addFlashAttribute("description", description);
             redirectAttributes.addFlashAttribute("scientificName", scientificName);
             redirectAttributes.addFlashAttribute("uploadedDate", uploadedDate);
-            redirectAttributes.addFlashAttribute("errorOccurred", true);
-            redirectAttributes.addFlashAttribute("showModal", true);
+            redirectAttributes.addFlashAttribute(errorOccurredAttribute, true);
+            redirectAttributes.addFlashAttribute(showModalAttribute, true);
 
             return "redirect:/myCollection";
         }
